# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-contract-sdk"
version = "0.4.3"
authors = ["dgc.network"]
license = "Apache-2.0"
description = """\
    Sawtooth Smart is a transaction family which implements on-chain smart \
    contracts executed in a WebAssembly virtual machine.
"""
documentation = "https://sawtooth.hyperledger.org/docs/smart/releases/latest/"
edition = "2018"


[dependencies]
protobuf = "2"

[build-dependencies]
protoc-rust = "2"
glob = "0.2"
