# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-contract-tp"
version = "0.4.3"
description = "Sawtooth Smart Transaction Processor"
authors = ["dgc.network"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.deb]
extended-description= """\
    Sawtooth Smart is a transaction family which implements on-chain smart \
    contracts executed in a WebAssembly virtual machine.
"""
depends = "$auto"
assets = [
    ["packaging/systemd/dgc-contract-tp.service",
    "/lib/systemd/system/dgc-contract-tp.service", "644"],
    ["packaging/systemd/dgc-contract-tp", "/etc/default/dgc-contract-tp", "644"],
    ["target/release/dgc-contract-tp", "/usr/bin/dgc-contract-tp", "755"],
]
maintainer-scripts = "packaging/ubuntu"
conf-files = [
    "/lib/systemd/system/dgc-contract-tp.service",
    "/etc/default/dgc-contract-tp"
]

[lib]
name = "dgc_contract_tp"
path = "src/lib.rs"

[[bin]]
name = "dgc-contract-tp"
path = "src/main.rs"

[dependencies]
sawtooth-sdk = "0.3"
dgc-contract-sdk = {path = "../sdk"}
log = "0.4"
simple_logger = "1"
clap = "2"
protobuf = "2"
rust-crypto = "0.2.36"
wasmi = "0.4"

[build-dependencies]
protoc-rust = "2"
