# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pike-cli"
version = "0.1.0"
authors = ["dgc.network"]
build = "build.rs"

[dependencies]
sawtooth-sdk = {git = "https://github.com/hyperledger/sawtooth-sdk-rust"}
addresser = {path = "../addresser"}
protobuf = "2"
clap = "2"
rust-crypto = "0.2"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
tokio-timer = "0.1"
users = "0.6"

[build-dependencies]
protoc-rust = "2"
