# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pike_db"
version = "0.0.0"
authors = ["dgc.network"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
postgres = "0.15"
diesel = { version = "1.2", features = ["postgres", "serde_json"] }

r2d2-diesel = "1.0"
r2d2 = "0.8"
